# Heights

./: .gitignore  README.md  bruker_test.py  evaluation.py  inference.py  predict.py  pyproject.toml  requirements.txt  test.py
heights/: dataset2chdm.py  metrics.py  model.py  utils.py
notebooks/: Train_2ch_ml_dm.ipynb  Train_model1.ipynb  inference.ipynb  inference_new.ipynb
src/: dataset.py  dataset2025_2cl_cirm.py  dataset2chdm.py  model.py  utils.py
tests/: gluncl21-2.0_00013.txt  testBMPLoad.py  testDataset.py  test_metrics_ci.py
tests/data/Labels/: 2017.03.30 CP MPO.022_1024.xlsx  2017.03.30 CP MPO.023_2048.xlsx
tests/data/Masks/: !2017.03.30 CP MPO.022_1024.txt  _2017.03.30 CP MPO.022_1024.txt
tests/inference/: NEPC31.018.001.txt  NEPC31.018.001frg.txt
