[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heights"
version = "0.1.0"
description = "Height estimation utilities and models for SPM images."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["heights*"]
